--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <p>See the <a href="https://github.com/catdad-experiments/raw-preview">GitHub page</a> for more info.</p>
   </div>
 
-  <div id="app"></div>
+  <div id="app" class="app"></div>
 
   <script type="module">
     document.querySelector('#unsupported').remove();
