--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script type="module">
     document.querySelector('#unsupported').remove();
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/exifreader@3.12.0/dist/exif-reader.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dcraw@1.0.3/dist/dcraw.js"></script>
   <script type="module" async>
     import loader from './src/loader.js';
 
